--- a/src/sass/_featuresNav.scss
+++ b/src/sass/_featuresNav.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
+    justify-content: space-between;
     height: 70px;
     box-shadow: 0px 0px 19px 1px rgba(18, 102, 150, 0.13);
     background-color: rgb(255, 255, 255);
@@ -18,7 +19,7 @@
       @media only screen and (max-width: 1371px) {
         font-size: 15px;
       }
-      width: 16.6%;
+      width: 100%;
       text-align: center;
       font-weight: 100;
       padding: 26px 0 26px 0;
